# dnssec-keytools

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  Dockerfile.kskm  Dockerfile.wksr  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
config/: ksrsigner.yaml  wksr.yaml
config/wksr/: email.txt  result.html  upload.html
docs/: README.md  aep-keyper-test.md  algorithms.md  assurance-cases.md  design-specifications.md  draft-icann-dnssec-keymgmt.txt  ksr-processing.md  ksr-signer.graffle  test.md  usage.md
docs/reports/: NoHatsAudit-KSKM-Tools-feature2024.pdf.asc  NoHatsAudit-KSKM-Tools-v1.01.sig
schema/: Makefile  ksr.rnc
src/kskm/: __init__.py  version.py
src/kskm/common/: __init__.py  config.py  config_ksk.py  config_misc.py  config_schema.py  config_wksr.py  daisy.py  data.py  display.py  dnssec.py  dsa_utils.py  ecdsa_utils.py  eddsa_utils.py  integrity.py  logging.py  parse_utils.py  public_key.py  rsa_utils.py  signature.py  validate.py  wordlist.py  xml_parser.py
src/kskm/common/tests/: test_config_schema.py  test_rsa_utils.py  test_wordlist.py  test_xml_parser.py
src/kskm/keymaster/: common.py  delete.py  inventory.py  keygen.py  wrap.py
src/kskm/keymaster/tests/: test_inventory.py  test_wrap.py
src/kskm/ksr/: __init__.py  data.py  load.py  parse_utils.py  policy.py  validate.py  verify_bundles.py  verify_header.py  verify_policy.py
src/kskm/ksr/tests/: common.py  test_archive.py  test_basics.py  test_parse_ksr_root.py  test_parse_utils.py  test_policy.py  test_signature.py  test_validate.py  test_validate_dnspython.py  test_validate_signatures.py  test_verify_bundles.py  test_verify_policy.py  utils.py
src/kskm/ksr/tests/data/: ksr-root-2016-q3-0.xml  ksr-root-2018-q1-0-d_to_e.xml  request_policy.yaml
src/kskm/misc/: __init__.py  crypto.py  hsm.py
src/kskm/misc/tests/: test_hsm.py  test_hsm_ops.py
src/kskm/misc/tests/data/: test.hsmconfig
src/kskm/signer/: __init__.py  daisy.py  key.py  policy.py  sign.py  verify_chain.py
src/kskm/signer/tests/: test_mockedhsm_sign.py  test_padding.py  test_policy.py  test_sign_hashing.py  test_signer_policy.py  test_softhsm_sign.py
src/kskm/signer/tests/data/: ksr-root-2017-q2-0.xml  skr-root-2017-q1-0.xml  skr-root-2017-q2-0.xml  skr-root-2017-q3-0-c_to_d.xml
src/kskm/skr/: __init__.py  data.py  load.py  output.py  parse_utils.py  policy.py  validate.py
src/kskm/skr/tests/: test_output.py  test_parse_skr_root.py  test_validate.py
src/kskm/skr/tests/data/: response_policy.yaml  skr-root-2018-q1-0-d_to_e.xml
src/kskm/ta/: __init__.py  data.py  keydigest.py
src/kskm/ta/tests/: test_keydigest.py  test_ta.py
src/kskm/tools/: keybackup.py  keymaster.py  kskgen.py  ksrsigner.py  sha2wordlist.py  trustanchor.py  wksr.py
src/kskm/tools_common/: __init__.py  daisy.py  display.py  logging.py  wordlist.py
src/kskm/tools_common/tests/: test_wordlist.py
src/kskm/wksr/: app.py  peercert.py  server.py
testing/sha2wordlist/: regression.sh
testing/softhsm/: .gitignore  Makefile  ec-prime256v1-1.key.in  ec-prime256v1-2.key.in  fail.sh  find_libsofthsm2.sh  ksr.bad.xml  ksrsigner.invalid.yaml  ksrsigner.template.yaml  rsa-2048-1.key.in  rsa-2048-2.key.in  softhsm.conf
testing/wksr/: Makefile  email.txt  ksr.xml  result.html  wksr.yaml
